objects/SBQQ__SearchFilter__c.object
<CustomObject>
    <customHelpPage>SBQQ__SearchFilterHelp</customHelpPage>
    <description>Search filter definition.</description>
    <fields>
        <fullName>SBQQ__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Action to which this filter applies. Blank value means the filter is global.</description>
        <inlineHelpText>Action to which this filter applies. Blank value means the filter is global.</inlineHelpText>
        <label>Action</label>
        <referenceTo>SBQQ__CustomAction__c</referenceTo>
        <relationshipLabel>Search Filters</relationshipLabel>
        <relationshipName>SearchFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>Order in which this filter is displayed in the UI.</description>
        <inlineHelpText>Order in which this filter is displayed in the UI.</inlineHelpText>
        <label>Display Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterSourceField__c</fullName>
        <description>Field that sources value for use in filtering.</description>
        <inlineHelpText>Field that sources value for use in filtering.</inlineHelpText>
        <label>Filter Source Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__FilterSourceObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterSourceObject__c</fullName>
        <description>Object that sources value for use in filtering.</description>
        <inlineHelpText>Object that sources value for use in filtering.</inlineHelpText>
        <label>Filter Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Static value used in filtering.</description>
        <inlineHelpText>Static value used in filtering.</inlineHelpText>
        <label>Filter Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HiddenSourceField__c</fullName>
        <description>Field that sources value for use in determining whether the filter is hidden.</description>
        <inlineHelpText>Specify the field that sources value for use in determining whether the filter is hidden.</inlineHelpText>
        <label>Hidden Source Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__HiddenSourceObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HiddenSourceObject__c</fullName>
        <description>Object that sources value for use in determining whether the filter is hidden.</description>
        <inlineHelpText>Specify object that sources value for use in determining whether the filter is hidden.</inlineHelpText>
        <label>Hidden Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this filter as hidden. Hidden filters do not display in the UI but contribute to search queries.</description>
        <inlineHelpText>Select the checkbox to mark this filter as hidden. Hidden filters do not display in the UI but contribute to search queries.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>Operator used by this filter to determine whether filter value is matched.</description>
        <inlineHelpText>Specify the operator to use with this filter.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TargetField__c</fullName>
        <description>Field searched by this filter.</description>
        <inlineHelpText>Specify the field to search.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__TargetObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product Description</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Region__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ConfigurationType__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object searched by this filter.</description>
        <inlineHelpText>Specify object to search.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Filter</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__TargetObject__c</columns>
        <columns>SBQQ__TargetField__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <columns>SBQQ__FilterValue__c</columns>
        <columns>SBQQ__Hidden__c</columns>
        <columns>SBQQ__HiddenSourceField__c</columns>
        <columns>SBQQ__FilterSourceField__c</columns>
        <columns>SBQQ__Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Require_filter_object_for_filter_field</fullName>
        <active>true</active>
        <description>Require filter source object is selected when filter source field is not blank.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__FilterSourceObject__c, &apos;&apos;),NOT(ISPICKVAL(SBQQ__FilterSourceField__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>You must select Filter Source Object when Filter Source Field is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Require_hidden_object_for_hidden_field</fullName>
        <active>true</active>
        <description>Require hidden source object is selected when hidden source field is not blank.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__HiddenSourceObject__c, &apos;&apos;),NOT(ISPICKVAL(SBQQ__HiddenSourceField__c, &apos;&apos;)))</errorConditionFormula>
        <errorMessage>You must select Hidden Source Object when Hidden Source Field is selected.</errorMessage>
    </validationRules>
</CustomObject>